add english translation for new string

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -5,3 +5,5 @@ en:
   outline: "Outline"
   show_outline: "Show Outline"
   hide_outline: "Hide Outline"
+
+  'Could not open file:': 'Could not open file:'
