slightly change translated string

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,4 +6,4 @@ en:
   show_outline: "Show Outline"
   hide_outline: "Hide Outline"
 
-  'Could not open file:': 'Could not open file:'
+  'Could not open file': 'Could not open file'
