work on new presentations views

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -7,3 +7,4 @@ en:
   hide_outline: "Hide Outline"
 
   'Could not open file': 'Could not open file'
+  'Create new presentation': 'Create new presentation'
