add some l10n for edit context

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -8,3 +8,7 @@ en:
 
   'Could not open file': 'Could not open file'
   'Create new presentation': 'Create new presentation'
+
+  edit:
+    save: "Save"
+    cancel: "Cancel"
